# rmc_simulation

./: CMakeLists.txt  README.md  package.xml
LunArena2/: LunArena2.sdf  model.config
action/: PanServo.action
gazebo_config/aruco/: model.config  model.sdf
gazebo_config/aruco_19cm/: model.config  model.sdf
gazebo_config/aruco_19cm/meshes/: aruco_marker.dae
gazebo_config/aruco_markers/multi/: multi-boards.launch
gazebo_config/control/: .surus_control.yaml.swp  surus_control.yaml
include/: gazebo_ros_servo.h
src/: gazebo_ros_servo.cpp
surus_sim/launch/: gazebo-full.launch  gazebo-jackal.launch  gazebo-no-world.launch  gazebo.launch
surus_sim/meshes/: Upper_link.STL  base_link.STL  bl_wheel_link.STL  br_wheel_link.STL  left_actuator_pivot_link.STL  left_actuator_shaft_link.STL  left_back_bot_vert_link.STL  left_bot_actuator_link.STL  left_bot_link.STL  left_front_bot_vert_link.STL  left_front_wheel.STL  left_front_wheel_link.STL  left_mid_wheel.STL  left_mid_wheel_link.STL  left_shaft_link.STL  left_top_link.STL  left_vert_back_link.STL  left_vert_front_link.STL  rear_left_wheel_link.STL  rear_right_wheel.STL  rear_rocker_link.STL  right_actuator_base_link.STL  right_back_bot_vert_link.STL  right_bot_actuator_link.STL  right_bot_link.STL  right_front_bot_vert_link.STL  right_front_wheel.STL  right_front_wheel_link.STL  right_mid_wheel.STL  right_middle_wheel_link.STL  right_top_actuator_link.STL  right_top_link.STL  right_vert_back_link.STL  right_vert_front_link.STL
surus_sim/meshes/base_link/: base_link.DAE  base_link.STL
surus_sim/meshes/visual_meshes/base_link/images/: Thumbs.db
surus_sim/meshes/wheels/all_left_wheels/images/: Thumbs.db
surus_sim/meshes/wheels/all_right_wheels/: right_wheel.DAE
surus_sim/robots/: surus_sim.URDF  surus_sim.sdf
surus_sim/src/: random_spawn.py
surus_sim/worlds/: LunArena.world
