<?xml version="1.0"?>
<package>
  <name>rmc_simulation</name>
  <version>0.9.0</version>
  <description>The rmc_simulation package</description>

  <maintainer email="krgebis@gmail.com">Krystian-L0g1x</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_localization</run_depend>
</package>
