<?xml version="1.0"?>
<package>
  <name>rmc_simulation</name>
  <version>0.9.0</version>
  <description>The rmc_simulation package</description>

  <maintainer email="krgebis@gmail.com">Krystian-L0g1x</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_localization</build_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />

  </export>

</package>
